# turkuaz_marketing_parser

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/versions/: 20260604_0002_market_product_sku.py  20260604_0003_deduplicate_market_products.py
app/: main.py
app/api/v1/: health.py  router.py
app/core/: auth.py  config.py
app/modules/market_parser/api/: routes_categories.py  routes_export.py  routes_products.py  routes_reports.py  routes_runs.py  routes_sources.py  routes_stats.py
app/modules/market_parser/models/: entities.py
app/modules/market_parser/repositories/: product_repo.py  run_repo.py  snapshot_repo.py
app/modules/market_parser/schemas/: product.py  reports.py  stats.py
app/modules/market_parser/services/: auto_run_scheduler.py  export_service.py  globus_parser.py  parser_service.py  report_service.py  run_control.py  run_recovery.py  snapshot_service.py  stats_service.py
frontend/: vite.config.ts
frontend/src/: App.tsx  ReportsWorkspace.tsx  styles.css
frontend/src/lib/: api.ts  types.ts
tests/: test_api_auth.py  test_auto_run_scheduler.py  test_globus_parser.py  test_parser_run_and_export.py  test_reports.py  test_snapshot_and_stats.py
