[project]
name = "turkuaz-marketing-parser"
version = "0.1.0"
description = "Turkuaz market parser service with Globus Online source support."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "alembic>=1.13.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyjwt>=2.9.0",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
marketing-parser = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
